--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,10 @@ smallvec = "1"
 bytemuck = { version = "1.0", features = ["derive"] }
 yuv = "0.8"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+core-video = "0.4"
+libc = "0.2"
+core-foundation = "0.10"
+
 [dev-dependencies]
 env_logger = "0.11"
