--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ core-foundation = "0.10"
 
 [dev-dependencies]
 env_logger = "0.11"
+gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
